# medical-data-analytics

./: .gitignore  .gitmodules  README.md  init.sh
airflow/: docker-compose.yml  requirements.txt
airflow/dags/: dbt_dag.py  elt_medicare_data.py
airflow/dags/scripts/: extract_prescriber_data.py  unpivot_medicare_spending_data.py
chainlit/: .env.example  chainlit_app.py  hello.py  pyproject.toml
dbt/medicare_analytics_dbt/: dbt_project.yml  profiles.yml
dbt/medicare_analytics_dbt/models/medicare/: schema.yml  sources.yml
standalone-spark/: Dockerfile  docker-compose.yml
standalone-spark/conf/: core-site.xml
